[gd_scene format=3 uid="uid://c6jatjqfvu7j0"]

[ext_resource type="Script" uid="uid://bdlt0bf2p47ce" path="res://scripts/projectile.gd" id="1_a85iw"]
[ext_resource type="Texture2D" uid="uid://bigtbb054pe5w" path="res://enemy_sprites.png" id="2_qxf0c"]
[ext_resource type="Texture2D" uid="uid://s60g356jmc5s" path="res://2d_light.webp" id="3_dgwo2"]
[ext_resource type="Script" uid="uid://2i62rtqxayqf" path="res://scripts/sfx_player.gd" id="4_7ivgc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qxf0c"]
size = Vector2(4, 2)

[node name="projectile" type="Area2D" unique_id=508874724]
z_index = 3
collision_layer = 8
collision_mask = 7
script = ExtResource("1_a85iw")

[node name="col" type="CollisionShape2D" parent="." unique_id=474405937]
shape = SubResource("RectangleShape2D_qxf0c")

[node name="sprite" type="Sprite2D" parent="." unique_id=1734392154]
position = Vector2(0.5, 0.5)
texture = ExtResource("2_qxf0c")
hframes = 8
vframes = 8
frame = 7

[node name="parry_trail" type="Line2D" parent="." unique_id=1524008270]
points = PackedVector2Array(0, 0, 0, 0)
width = 0.5
default_color = Color(0.8627451, 0.90588236, 0.4392157, 1)

[node name="light_shadow" type="PointLight2D" parent="." unique_id=1198440927]
visible = false
color = Color(0.78967714, 0.64240557, 0.062422834, 1)
shadow_enabled = true
shadow_filter = 1
texture = ExtResource("3_dgwo2")
texture_scale = 0.1

[node name="sfx" type="Node2D" parent="." unique_id=160458072]
script = ExtResource("4_7ivgc")

[node name="parry_particles" type="CPUParticles2D" parent="." unique_id=82182749]
rotation = 3.1415927
emitting = false
amount = 24
lifetime = 0.25
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
lifetime_randomness = 0.25
gravity = Vector2(0, 0)
initial_velocity_min = 66.66
initial_velocity_max = 78.79
angular_velocity_min = -366.55
angular_velocity_max = 410.18
linear_accel_min = -100.0
linear_accel_max = -100.0
radial_accel_min = 10.91
radial_accel_max = 10.91
scale_amount_min = 0.25
scale_amount_max = 0.75
color = Color(0.92941177, 0.88235295, 0.61960787, 1)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
